<resources>
    <string name="app_name">CMS Helper</string>
    <string name="title_activity_main">ComplaintAdmin</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="register">Register</string>
    <string name="create_your_username">Create Your Username</string>
    <string name="enter_name">Enter Your Name(First, Last)</string>
    <string name="create_password">Create Your Password</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Empty</string>
    <string name="action_settings">Action Setting</string>
    <string name="postchecker">Welcome to POSt Checker, which POSt are you currently pursuing?</string>
    <string name="CStext">Computer Science</string>
    <string name="majorSpec">Major/Specialist</string>
    <string name="minor">Minor</string>
    <string name="csreq1">Do you have a average GPA of at least 2.5 across the following five courses: CSC/MATA67, CSCA48, MATA22, \nMATA31, MATA37?\n</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="csreq2">Have you completed 4.0 credits and achieved a grade at least B- in CSCA48, and at least C- in two of the following: CSC/MATA67, MATA22, or MATA37?</string>
    <string name="csMinorReq">Have you completed 4.0 credits, including CSCA08, CSCA48, and \none of the following: CSCA67/MATA67, MATA22/A23, MATA30/A31/A32)?</string>
    <string name="math">Mathematics</string>
    <string name="major">Major</string>
    <string name="specialist">Specialist</string>
    <string name="mathMajorReq">Do you have an average GPA of at least 2.0 across the following four courses: CSC/MATA67, MATA22, MATA31, MATA37?</string>
    <string name="mathSpecialReq">Have you achieved an average GPA of at least 2.5 across the following four courses: CSC/MATA67, MATA22, MATA31, MATA37?</string>
    <string name="mathMajorReq2">Have you completed 4 credits with a grade of at least B in one of CSC/MATA67, MATA22, MATA37?</string>
    <string name="mathSpecialReq2">Have you completed 4 credits with a grade of at least B in two of CSC/MATA67, MATA22, MATA37?\n</string>
    <string name="stat">Statistics</string>
    <string name="statML">Are you applying for the Machine Learning and Data Specialist Stream?</string>
    <string name="mlReq">Do you have a grade of at least B in CSCA48?</string>
    <string name="statSpecialReq">Have you completed 4 credits with an average GPA of at least 2.5 across the following four courses: CSCA08, CSC/MATA67, MATA22, MATA31, MATA37?</string>
    <string name="statmajor">Have you completed 4 credits with an average GPA of at least 2.3 across the following four courses: CSCA08/A20, MATA22, MATA30/A31, MATA36/A37?</string>
    <string name="complaintTxt">Complaint</string>
    <string name="subjectTxt">Subject</string>
    <string name="contentTxt">Content</string>
    <string name="post_checkerTxt">POSt Checker</string>
    <string name="complaintsTxt">Complaints</string>
    <string name="event_details">Event Details</string>
    <string name="start_time">Start Time:</string>
    <string name="start_timePlaceholder">start_time</string>
    <string name="end_time">End Time:</string>
    <string name="end_timePlaceholder">end_time</string>
    <string name="location">Location:</string>
    <string name="locationPlaceholder">location</string>
    <string name="current_available_space">Current Available Space:</string>
    <string name="spacePlaceholder">space</string>
    <string name="description">Description:</string>
    <string name="descriptionPlaceholder">description</string>
    <string name="click_to_edit_this_event">Edit this event</string>
    <string name="click_to_view_feedback">View feedback</string>
    <string name="detailed_comment">Detailed Comment</string>
    <string name="rating">Rating:</string>
    <string name="ratingPlaceholder">rating</string>
    <string name="comment">Comment:</string>
    <string name="commentPlaceholder">comment</string>
    <string name="update_event">Update Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="select_start_date_and_time">Select Start Date and Time</string>
    <string name="select_end_date_and_time">Select End Date and Time</string>
    <string name="participants_limit">Participants Limit</string>
    <string name="enter_your_event_description">Enter Your Event Description</string>
    <string name="submit">submit</string>
    <string name="event_management">Event Management</string>
    <string name="event_comment">Event Comment</string>
    <string name="feedback">Feedback</string>
    <string name="number_of_rates">Number of rates:</string>
    <string name="num_ratesPlaceholder">num_rates</string>
    <string name="average">Average:</string>
    <string name="averagePlaceholder">average</string>
    <string name="click_to_view_detailed_comments">View Detailed Comments</string>
    <string name="post_announcement">Post Announcement</string>
    <string name="post_your_announcement">Post Your Announcement</string>
    <string name="enter_announcement_title_here">Enter Announcement Title Here</string>
    <string name="enter_announcement_content_here">Enter Announcement Content Here</string>
    <string name="post">Post</string>
    <string name="post_event">Post Event</string>
    <string name="dashboard">Dashboard</string>
    <string name="post_announcements">Post Announcement</string>
    <string name="view_complaints">View Complaints</string>
    <string name="create_new_events">Create New Event</string>
    <string name="events_management">Event Management</string>
    <string name="view_announcement">View Announcements</string>
    <string name="click_to_log_out">Click to Log Out</string>
    <string name="admin_login">Admin Login</string>
    <string name="admin_register">Admin Register</string>
    <string name="announcements">Announcements</string>
    <string name="announcement">Announcement</string>
    <string name="event">event</string>
    <string name="new_complaint">New Complaint</string>
    <string name="submit_your_complaints">Submit Your Complaint</string>
    <string name="enter_your_complaints">Enter Your Complaint</string>
    <string name="click_to_give_your_feedback">Give Your Feedback</string>
    <string name="rsvp">RSVP</string>
    <string name="rate_this_event">Rate This Event</string>
    <string name="enter_your_comment">Enter Your Comment</string>
    <string name="scheduled_events">Scheduled Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="submit_complaints">Submit Complaints</string>
    <string name="an_admin_click_here">An admin? Click here</string>
    <string name="enter_location">Location</string>
</resources>