<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student_Event.DetailedScheduledEventActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_primary_color"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_circle_left_24"
        app:title=""
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetLeft="0dp"
        app:titleTextColor="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_details"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/back_bar"
        app:layout_constraintBottom_toTopOf="@id/RSVP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subject_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subjectTxt"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                tools:layout_editor_absoluteY="139dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/start_time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_timePlaceholder"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/end_time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_timePlaceholder"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:text="@string/location"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/location_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/locationPlaceholder"
                    android:textSize="20sp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:text="@string/current_available_space"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/space_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spacePlaceholder"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:text="@string/description"
                android:textSize="20sp"
                android:padding="5dp" />

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptionPlaceholder"
                android:textSize="20sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/RSVP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rsvp"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>