<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student_POSt_checker.stat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_primary_color"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_circle_left_24"
        app:title=""
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetLeft="0dp"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat"
        android:textStyle="bold"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_bar"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/statMajorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/major"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statSpecialButton"/>

    <Button
        android:id="@+id/statSpecialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specialist"
        android:textSize="20sp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_bar"/>

    <Button
        android:id="@+id/statMinorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/minor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statMajorButton" />
</androidx.constraintlayout.widget.ConstraintLayout>